<resources>
    <string name="app_name">Story App</string>
    <string name="title_menu_1">Capture Moments</string>
    <string name="title_menu_2">Your Story, Collaborative Art</string>
    <string name="title_menu_3">Liked and Appreciated</string>
    <string name="title_menu_4">Complete Social Interaction</string>
    <string name="desc_menu_1">Share your special moments through a simple and engaging photo posting feature</string>
    <string name="desc_menu_2">Explore and share your stories to connect with more friends</string>
    <string name="desc_menu_3">Like inspiring stories and feel the warmth of the community</string>
    <string name="desc_menu_4">More than just posting. Experience closeness with the community through social interactions—likes and comments that bring your story to life</string>
    <string name="btn_gabung">Join Now</string>
    <string name="cotent_desctiption_card">Story Image</string>
    <string name="title_card">Card Title</string>
    <string name="desc_card">Card Description</string>
    <string name="login">Log In</string>
    <string name="or">Or</string>
    <string name="register">Register</string>
    <string name="email_input">Email</string>
    <string name="password_input">Password</string>
    <string name="name_input">Name</string>
    <string name="error_input_name">Name must be at least 3 characters long</string>
    <string name="error_input_email">Invalid email format</string>
    <string name="error_input_password">Password must be at least 8 characters long</string>
    <string name="succes_register">Registration Successful!</string>
    <string name="failed_register">Registration Failed!</string>
    <string name="ok">OK</string>
    <string name="dialog_success_register">Account with email %1$s successfully registered, please proceed to Log In</string>
    <string name="dialog_success_login">You have successfully logged in, can\'t wait to share your stories!</string>
    <string name="dialog_failed_register">Registration failed. Please check your inputs and try again.</string>
    <string name="dialog_failed_login">Login failed. Please check your inputs and try again.</string>
    <string name="success_login">Success Login!</string>
    <string name="failed_login">Failed Login!</string>
    <string name="menu1">Profile</string>
    <string name="menu2">Map</string>
    <string name="fab_add_story">floating action button add story</string>
    <string name="profile">Profile</string>
    <string name="nama_profile">Nama Profile</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="exit">Exit</string>
    <string name="detail_story">Detail Story</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="list_empty">List Story Empty</string>
    <string name="setting_language">Change Language</string>
    <string name="empty_image_warning">Please insert an image file first.</string>
    <string name="email_is_already_taken">Email is Already Taken, Please Input Another Email.</string>
    <string name="description_empty">Description is Empty, Please input again</string>
    <string name="failed_upload">Failed to Upload!</string>
    <string name="logout">Logout!</string>
    <string name="logout_description">Do you want to Logout ?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="my_location">I am Here</string>
    <string name="retry">Retry</string>
    <string name="input_locaion">Input Location</string>
    <string name="permis_granted">Permission request granted</string>
    <string name="permis_denied">Permission request denied</string>
</resources>