<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_login"
            android:layout_width="250dp"
            android:layout_height="172dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            app:layout_constraintBottom_toTopOf="@+id/guidelinehorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelinehorizontal2"
            app:srcCompat="@drawable/login" />

        <TextView
            android:id="@+id/title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            tools:alpha="100"
            android:text="@string/login"
            style="@style/TextAppearance.MdcTypographyStyles.Headline5"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guidelinehorizontal" />


        <TextView
            android:id="@+id/email_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:text="@string/email_input"
            android:alpha="0"
            tools:alpha="100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_login"/>


        <com.ndiman.storyapp.ui.customview.InputEmail
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            tools:alpha="100"
            android:background="@drawable/outline_rectangle_24"
            style="@style/Widget.App.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_view" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/password_text_view"
            style="@style/TextAppearance.MdcTypographyStyles.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/password_input"
            android:alpha="0"
            tools:alpha="100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <com.ndiman.storyapp.ui.customview.InputPassword
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            tools:alpha="100"
            android:background="@drawable/outline_rectangle_24"
            style="@style/Widget.App.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text_view" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="32dp"
            android:alpha="0"
            android:text="@string/login"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password"
            tools:alpha="100" />

        <TextView
            android:id="@+id/textOr"
            style="@style/TextAppearance.MdcTypographyStyles.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/or"
            android:alpha="0"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />
        
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            app:dividerThickness="1dp"
            android:layout_marginEnd="17dp"
            android:alpha="0"
            style="@style/Widget.Material3.MaterialDivider"
            app:dividerColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toStartOf="@+id/textOr"
            app:layout_constraintTop_toTopOf="@+id/textOr"
            app:layout_constraintBottom_toBottomOf="@+id/textOr"/>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            style="@style/Widget.Material3.MaterialDivider"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:alpha="0"
            app:dividerThickness="1dp"
            app:dividerColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/textOr"
            app:layout_constraintStart_toEndOf="@+id/textOr"
            app:layout_constraintTop_toTopOf="@+id/textOr" />

        <Button
            android:id="@+id/registerButton"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="70dp"
            android:alpha="0"
            android:text="@string/register"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            tools:alpha="100" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinehorizontal"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.3"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelinehorizontal2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>