<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:menuCategory="container">
        <item
            android:id="@+id/menuMaps"
            android:icon="@drawable/map"
            android:title="@string/menu2"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/menuProfile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu1"
            app:showAsAction="ifRoom"/>

    </group>
</menu>